# dokaponsof

./: .gitignore  CONTRIBUTING.md  DokaponSoFTools.spec  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: pages.yml
Tools/: CREDIT.mpd  CSFIX_00.spranm  CSTIM1_00.tex  CSTIM1_01.tex  CSTIM2_01.tex  CSTIM2_03.tex  all2image.py  dokapon_extract.py  font_extrect_repack.py  spranm_info.py  tex_export.py  voice_pck_extractor.py
Tools/Testing/: mdl_viewer.py
Voice-en/: V_0001.opus  V_0002.opus  V_0003.opus  V_0004.opus  V_0005.opus  V_0006.opus  V_0007.opus  V_0008.opus  V_0009.opus  V_0010.opus  V_0011.opus  V_0012.opus  V_0013.opus  V_0014.opus  V_0015.opus  V_0016.opus  V_0017.opus  V_0018.opus  V_0019.opus  V_0020.opus  V_0021.opus  V_0022.opus  V_0023.opus  V_0024.opus  V_0025.opus  V_0026.opus  V_0027.opus  V_0028.opus  V_0029.opus  V_0030.opus  V_0031.opus  V_0032.opus  V_0033.opus  V_0034.opus  V_0035.opus  V_0036.opus  V_0037.opus  V_0038.opus  V_0039.opus  V_0040.opus  (+324 more)
app/: AGENTS.md  __init__.py  build_exe.py  main.py  requirements.txt
csharp/: DokaponSoFTools.sln
docs/: .gitignore  Gemfile  _config.yml  index.md
research/: H_NPC_04_00.spranm  H_NPC_07_00.spranm  NPC_02_00.spranm  NPC_04_00.spranm  NPC_06_00.spranm  cleaned_texts.txt  exe_analysis.md  extracted_texts_translation.csv  pck_format.md  text_offsets.txt
test/doka/: README.md  decode_cells.py  dokapon_devtools.py  explore_dokapon.py  pyproject.toml
test/doka/src/dokapon_explorer/: __init__.py  cell.py  lz77.py  report.py  scanner.py  texture.py  workbench.py
(+485 files in other folders)
