[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dokapon-explorer"
version = "0.1.0"
description = "Reverse-engineering helper for DOKAPON! Sword of Fury map and debug formats."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
